--- a/22/ColourOfCar/Assembly-CSharp.csproj
+++ b/22/ColourOfCar/Assembly-CSharp.csproj
@@ -51,7 +51,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\C#Scripts\Rotate.cs" />
+     <Compile Include="Assets\C#Scripts\Red.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
